# Mystoryai6

./: character_bios.py  index.js  main.py  package.json  pyproject.toml  supabaseSession.ts  supabase_session.py
.flask_sess/: tmp16ghz5c0.__wz_cache  tmp6ts4p2pc.__wz_cache  tmp99b7c2xl.__wz_cache  tmpc96q2gaz.__wz_cache  tmpfzvu7dh2.__wz_cache  tmpqgcjp40r.__wz_cache  tmpudt_oj_q.__wz_cache
attached_assets/: Pasted--System-Prompt-Fifty-Shades-of-Grey-Replication-Highly-Explicit-FULL-You-are-to-embody-Chris-1738934991349.txt  Pasted--app-route-generate-erotica-methods-POST-def-generate-erotica-Gets-interaction-log-1740030067178.txt  Pasted--type-object-title-Input-properties-mask-type-string--1740974776727.txt  Pasted-Character-Lucy-Andersen-21-Appearance-Tall-5-10-slender-athletic-build-Sunny-blonde-hair-o-1741166763519.txt  Pasted-Lucy-s-Core-Conflict-She-presents-as-a-polite-kind-and-inexperienced-good-girl-deeply-insecure-1741167227685.txt  Pasted-SETTING-CITY-Aurora-Heights-Colorado-A-seemingly-normal-upscale-mountain-resort-town-hiding-a-1738982591111.txt  Pasted-Updated-System-Prompt-AI-Companion-with-Relationship-Stages-Sexual-Mode-Including-Explicit-Dirty-1739750435642.txt  Pasted-You-are-to-embody-Christian-Grey-a-27-year-old-wealthy-and-powerful-entrepreneur-in-Seattle-You--1738981132291.txt
templates/: about.html  base.ejs  base.html  biography.html  dashboard.html  erotica_story.html  full_story.html  gallery.html  home.html  interaction.html  login.ejs  login.html  manual_npc_update.html  mid_game_personalize.html  npc_image.html  personalize.html  (+3 more)
(+2 files in other folders)
