[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask-session>=0.8.0",
    "flask>=3.1.0",
    "openai>=1.59.7",
    "replicate>=1.0.4",
    "requests>=2.32.3",
    "google-generativeai>=0.8.4",
    "supabase>=2.13.0",
]
